src/less/about.less
.about__block {
    padding: 20px;
}

.about__title {
    color: #7CABDC;
    font-size: 52px;
    font-family: 'Shorelines Script Bold', sans-serif;
}

.about__description {
    font-size: 30px;
    font-family: 'primer print', sans-serif;
}

.about__clarissa {
    display: flex;
    flex-direction: row;
    min-height: 200px;
}

.about__darby {
    display: flex;
    flex-direction: row-reverse;
    min-height: 200px;
}

.about__darby .about__title {
    width: 100%;
    text-align: right;
}

.about__darby .about__description {
    text-align: right;
}

.about__clarissa__picture {
    background-image: url("../images/clarissa.png");
    background-size: contain;
    background-repeat: no-repeat;
    min-width: 250px;
    margin-right: 30px;
}

.about__darby__picture {
    background-image: url("../images/darby_on_sofa.png");
    background-size: contain;
    background-repeat: no-repeat;
    min-width: 250px;
    margin-left: 30px;
}

@media (max-width: 992px) {
    .about__block {
        display: block;
    }

    .about__title {
        text-align: center;
    }

    .about__description {
        width: 96vw;
    }

    .about__darby .about__title {
        text-align: center;
    }

    .about__darby .about__description {
        width: 96vw;
        text-align: left;
    }

    .about__clarissa__picture, .about__darby__picture {
        width: 96vw;
        height: 32vw;
        margin-top: 5vw;
        background-size: contain;
        background-position: center;
    }
}

